[package]
name = "dc-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.0"
console = "0.15.0"
regex = "1.5.5"
serde = { version= "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_with = "1.12.1"